# wipy

./: Podfile  README.md  streamer
dmg/: .gitignore
package/: .gitignore  Taskfile.yml  deploy.py  pyproject.toml  wipy.icns  wipy.json
wipy/: ContentView.swift  MainWindow.swift  Menu.swift  Player.swift  PreferencesView.swift  Stream.swift  TextField.swift  UrlView.swift  VideoView.swift  header.m  wipyApp.swift
wipy.xcodeproj/: project.pbxproj
wipy.xcodeproj/project.xcworkspace/xcuserdata/jago.xcuserdatad/: UserInterfaceState.xcuserstate
wipy.xcodeproj/xcshareddata/xcschemes/: wipy.xcscheme
wipy.xcodeproj/xcuserdata/jago.xcuserdatad/xcschemes/: xcschememanagement.plist
wipy.xcworkspace/: contents.xcworkspacedata
wipy.xcworkspace/xcshareddata/swiftpm/: Package.resolved
wipy.xcworkspace/xcuserdata/jago.xcuserdatad/: UserInterfaceState.xcuserstate
wipy.xcworkspace/xcuserdata/jago.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
wipy/Assets.xcassets/AppIcon.appiconset/: Contents.json
wipy/wipy 2021-09-23 06-27-08/wipy.app/Contents/: Info.plist
wipy/wipy 2021-09-23 06-27-08/wipy.app/Contents/Frameworks/VLCKit.framework/Versions/A/_CodeSignature/: CodeResources
wipy/wipy 2021-09-23 06-27-08/wipy.app/Contents/MacOS/: wipy
wipy/wipy 2021-09-23 06-27-08/wipy.app/Contents/Resources/: AppIcon.icns  Assets.car
wipy/wipy 2021-09-23 06-27-08/wipy.app/Contents/_CodeSignature/: CodeResources
