[tool.poetry]
name = "wipy"
version = "1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-gitlab = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^21.9-beta.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
